# cargacontratos-sorydi3

./: .gitignore
build-contractgenerator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-contractgenerator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-e40d30c637ba466be055.json  cmakeFiles-v1-e73cfeb01a9675a963e1.json  codemodel-v2-9dba56c89498835578d2.json  directory-.-Debug-34777fae74ce50986acc.json  (+13 more)
build-contractgenerator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-contractgenerator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt/deploy_qml_imports/: appcontractgenerator.cmake
build-contractgenerator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appcontractgenerator.rsp
build-contractgenerator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-contractgenerator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.rcc/: appcontractgenerator_raw_qml_0.qrc  qmake_contractgenerator.qrc
build-contractgenerator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.rcc/qmlcache/: appcontractgenerator_qml_loader_file_list.rsp
build-contractgenerator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/contractgenerator/: main.qml  qmldir
build-contractgenerator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/meta_types/: qt6appcontractgenerator_debug_metatypes.json
build-contractgenerator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/qmltypes/: appcontractgenerator_foreign_types.txt
contractgenerator/: CMakeLists.txt  LabelInput.qml  filereader.cpp  filereader.h  main.cpp  main.qml
(+1 files in other folders)
